--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="glow-circle"></div>
 
             <div class="love-bridge" aria-hidden="true">
-                <div class="photo-frame left circle" style="--img:url('left.jpg')">
+                <div class="photo-frame left circle" style="--img:url('Left.jpg')">
                     <div class="photo-glass"></div>
                 </div>
 
@@ -222,7 +222,7 @@
                     <div class="ekg-heart">❤</div>
                 </div>
 
-                <div class="photo-frame right circle" style="--img:url('right.jpg')">
+                <div class="photo-frame right circle" style="--img:url('Right.jpg')">
                     <div class="photo-glass"></div>
                 </div>
             </div>
